# anyio

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .readthedocs.yml  .travis.yml  AGENTS.md  LICENSE  README.rst  azure-pipelines.yaml  pre-commit-config.sample.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: codeqa-test.yml  publish.yml  test-downstream.yml  test.yml
anyio/: __init__.py  _networking.py  _utils.py  abc.py  exceptions.py  pytest_plugin.py  utils.py
anyio/_backends/: _asyncio.py  _curio.py  _trio.py  asyncio.py  curio.py  trio.py
anyio/backends/: asyncio.py  base.py  curio.py  trio.py
debian/: .gitignore  changelog  control  rules  watch
docs/: api.rst  backend_options.rst  basics.rst  cancellation.rst  conf.py  contextmanagers.rst  contributing.rst  faq.rst  fileio.rst  index.rst  migration.rst  networking.rst  signals.rst  streams.rst  subinterpreters.rst  subprocesses.rst  support.rst  synchronization.rst  tasks.rst  tempfile.rst  testing.rst  threads.rst  typedattrs.rst  versionhistory.rst  why.rst
examples/: config_example.py
hyperio/: __init__.py  abc.py  exceptions.py  interfaces.py  pytest_plugin.py
hyperio/backends/: asyncio.py  curio.py  trio.py
src/anyio/: __init__.py  _itertools.py  _lazyimport.py  _networking.py  _run_in_context.py  _run_in_context.pyi  _utils.py  abc.py  exceptions.py  fileio.py  from_thread.py  functools.py  itertools.py  lowlevel.py  pytest_plugin.py  synchronization.py  to_interpreter.py  to_process.py  to_thread.py  utils.py
src/anyio/_backends/: _asyncio.py  _curio.py  _selector_thread.py  _trio.py
src/anyio/_core/: _asyncio_proactor_thread.py  _asyncio_runner.py  _asyncio_selector_thread.py  _asyncio_windows_process.py  _compat.py  _config.py  _contextmanagers.py  _eventloop.py  _exceptions.py  _fileio.py  _futures.py  _generators.py  _lowlevel.py  _resources.py  _signals.py  _sockets.py  _streams.py  _subprocess_worker.py  _subprocesses.py  _synchronization.py  _tasks.py  _tempfile.py  _testing.py  _threads.py  _typedattr.py  _utils.py  _workers.py
src/anyio/abc/: __init__.py  _eventloop.py  _lowlevel.py  _resources.py  _sockets.py  _streams.py  _subprocesses.py  _synchronization.py  _tasks.py  _testing.py  _threads.py  networking.py  resources.py  sockets.py  streams.py  subprocesses.py  synchronization.py  tasks.py  testing.py  threads.py
src/anyio/streams/: buffered.py  file.py  memory.py  stapled.py  text.py  tls.py
tests/: cert.pem  conftest.py  key.pem  misc.py  samplescript.py  test_all_attributes.py  test_bounded_task_groups.py  test_compat.py  test_config.py  test_contextmanagers.py  test_debugging.py  test_deprecations.py  test_eventloop.py  test_fileio.py  test_from_thread.py  test_functools.py  test_futures.py  test_generators.py  test_hypothesis.py  test_itertools.py  test_lazyimport.py  test_lowlevel.py  test_misc_py36.py  test_networking.py  test_pytest_plugin.py  test_signals.py  test_sockets.py  test_subprocesses.py  test_synchronization.py  test_taskgroups.py  test_tempfile.py  test_testing.py  test_threads.py  test_to_interpreter.py  test_to_process.py  test_to_thread.py  test_typedattr.py  test_utilities.py  test_workers.py
tests/_backends/: test_asyncio.py
tests/streams/: test_buffered.py  test_file.py  test_memory.py  test_stapled.py  test_text.py  test_tls.py
