[metadata]
name = anyio
description = High level compatibility layer for multiple asynchronous event loop implementations
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
project_urls =
    Documentation = https://anyio.readthedocs.io/en/latest/
    Source code = https://github.com/agronholm/anyio
    Issue tracker = https://github.com/agronholm/anyio/issues
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir=
    = src
packages = find:
python_requires = >= 3.5.3
zip_safe = False
install_requires =
    async_generator
    idna >= 2.8
    sniffio >= 1.1

[options.packages.find]
where = src

[options.package_data]
anyio = py.typed

[options.extras_require]
test =
    coverage >= 4.5
    hypothesis >= 4.0
    pytest >= 3.7.2
    uvloop; platform_python_implementation == 'CPython' and platform_system != 'Windows'
trio = trio >= 0.12
curio =
    curio >= 0.9; python_version >= '3.6'
    curio == 0.9; python_version == '3.5.*'
doc =
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0

[options.entry_points]
pytest11 =
    anyio = anyio.pytest_plugin

[tool:pytest]
addopts = -rsx --tb=short --anyio-backends=all
testpaths = tests

[coverage:run]
source = anyio
relative_files = true

[coverage:report]
show_missing = true

[flake8]
max-line-length = 99

[mypy]
ignore_missing_imports = true
