[metadata]
name = anyio
description = High level compatibility layer for multiple asynchronous event loop implementations
long_description = file: README.rst
author = Alex Grönholm
author_email = alex.gronholm@nextday.fi
project_urls =
    Documentation = https://anyio.readthedocs.io/en/latest/
    Source code = https://github.com/agronholm/anyio
    Issue tracker = https://github.com/agronholm/anyio/issues
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Framework :: AnyIO
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    = src
packages = find:
python_requires = >= 3.7
zip_safe = False
install_requires =
    exceptiongroup; python_version < '3.11'
    idna >= 2.8
    sniffio >= 1.1
    typing_extensions; python_version < '3.8'

[options.packages.find]
where = src

[options.package_data]
anyio = py.typed

[options.extras_require]
trio = trio@git+https://github.com/python-trio/trio.git@exceptiongroup
test =
    trio@git+https://github.com/python-trio/trio.git@exceptiongroup
    mock >= 4; python_version < '3.8'
    coverage[toml] >= 4.5
    hypothesis >= 4.0
    pytest >= 6.0
    pytest-mock >= 3.6.1
    trustme
    uvloop >= 0.15; platform_python_implementation == 'CPython' and platform_system != 'Windows' and python_version < '3.11'
doc =
    packaging
    sphinx_rtd_theme
    sphinx-autodoc-typehints >= 1.2.0

[options.entry_points]
pytest11 =
    anyio = anyio.pytest_plugin
